[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biphysnet-tfbs"
version = "0.1.0"
description = "Cross-modal contrastive learning with DNA biophysical features for TFBS prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Wu Jiwei"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
